# icakad

./: AGENTS.md  README (copy).md  README.md  pyproject.toml
docs/: bookmarklet.html  bookmarklet_v2.html  cli.html  config.html  index.html  paste.html  shorturl.html  style.css
src/icakad/: __init__.py  __main__.py  _version.py  api.py  cli.py  shorturl.py
src/icakad.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_ai_conversation.py  test_cli.py  test_common.py  test_config.py  test_icakad.py  test_paste.py  test_shorturl.py
