[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "icakad"
version = "0.2.0"
description = "Utilities and tools for my apis and other life hacks."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31",
]
license = { file = "LICENSE" }
authors = [{ name = "icakad" }]
keywords = ['icakad', "shorturl", "url-shortener"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://linkove.icu/"
Repository = "https://github.com/icakad97/icakad"

[project.scripts]
icakad = "icakad.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
